harness/test/errors/066_odd_predicate_hint.eu
# Mistake: using odd? (Python/Haskell style) — does not exist in eucalypt
xs: [1, 2, 3, 4, 5]
odds: xs filter(odd?)
